--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
             crossorigin="anonymous" />
         <i class="fas fa-bars navbar__menu-icon"></i>
-        <ul class="navbar__list">
+        <ul class="navbar__list active">
             <li class="navbar__item"><a href="#" class="navbar__link">Home</a></li>
             <li class="navbar__item"><a href="#" class="navbar__link">About</a></li>
             <li class="navbar__item"><a href="#" class="navbar__link">Contact</a></li>
