--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 <body>
 
     <nav class="navbar">
-        <div class="navbar__title">BRAND</div>
+        <div class="navbar__title"><i class="fas fa-copyright fa-xs navbar__title-icon"></i> BRAND</div>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
             integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
             crossorigin="anonymous" />
         <i class="fas fa-bars navbar__menu-icon"></i>
-        <ul class="navbar__list active">
+        <ul class="navbar__list">
             <li class="navbar__item"><a href="#" class="navbar__link">Home</a></li>
             <li class="navbar__item"><a href="#" class="navbar__link">About</a></li>
             <li class="navbar__item"><a href="#" class="navbar__link">Contact</a></li>
